--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n"
    ]
   },
   {
@@ -20,7 +22,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 ('image_retrieval')",
+   "display_name": "Python 3.10.8 ('gscmr4cqbir')",
    "language": "python",
    "name": "python3"
   },
@@ -34,12 +36,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8dbbfe6a797e506729a5539149b6ef633c7b26ebf66607ef4802d2de93da9692"
+    "hash": "b34b9b54d67f9445fca51535a816c4057b03012273c4b3c57e2776c371907ea6"
    }
   }
  },
