--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -9,7 +9,49 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n"
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "import time\n",
+    "import copy\n",
+    "import pickle\n",
+    "# from barbar import Bar\n",
+    "import scipy\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from PIL import Image\n",
+    "import cv2\n",
+    "\n",
+    "import torch\n",
+    "import torchvision\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data.dataset import Dataset\n",
+    "from torchvision import transforms\n",
+    "# from torchsummary import summary\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "from pathlib import Path\n",
+    "import gc\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOMSTATE = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find if any accelerator is presented, if yes switch device to use CUDA or else use CPU\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)\n"
    ]
   },
   {
