--- a/notebooks/tensorflow.ipynb
+++ b/notebooks/tensorflow.ipynb
@@ -16,7 +16,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.15 (main, Oct 12 2022, 19:14:24) \n[GCC 9.4.0]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
