--- a/notebooks/gru_torch.ipynb
+++ b/notebooks/gru_torch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,14 @@
     "import torchtext\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
